optimizing VM args